Added a welcome text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav style="display: flex; justify-content: space-between; align-items: center; padding: 0 20px;">
         <div class="brand">
-            <h1>Study Flash</h1>
+            <h1>StudyFlash</h1>
         </div>
         <ul>
             <a href="dashboard.html" class="links">Dashboard</a>
@@ -22,10 +22,13 @@
         <button class="signlog">Sign up / Log in</button>
         <button class="signlog" style="display: none;" id="logout">Log Out</button>
     </nav>
-    
 
-
-
+    <section class="about">
+        <h2>What is StudyFlash?</h2>
+        <p>StudyFlash is a learning-focused web application designed to help users study more effectively, not just track academic results. Instead of focusing on grades or outcomes, the platform emphasizes the learning process itself by encouraging active recall, consistent study habits, and visible progress over time. The goal of StudyFlash is to make studying more structured, engaging, and sustainable.</p>
+        <p>The application allows users to organize what they want to learn, actively review material through focused study sessions, and monitor their improvement. By providing clear feedback on progress and study consistency, StudyFlash helps users understand how they learn and where they need to focus more effort. This shifts learning from passive reading to intentional practice.</p>
+        <p>StudyFlash is built as a productivity-oriented learning tool, combining simple design with practical features that support concentration and long-term retention. It is intended for students and self-learners who want to improve how they study, not just what they study.</p></p>
+    </section>
 
     <div id="authModal" style="display: none;">
         <div class="modalForm">
