Changed the paragraph description.

--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
 
     <section class="about">
         <h2>What is StudyFlash?</h2>
-        <p>StudyFlash is a learning-focused web application designed to help users study more effectively, not just track academic results. Instead of focusing on grades or outcomes, the platform emphasizes the learning process itself by encouraging active recall, consistent study habits, and visible progress over time. The goal of StudyFlash is to make studying more structured, engaging, and sustainable.</p>
-        <p>The application allows users to organize what they want to learn, actively review material through focused study sessions, and monitor their improvement. By providing clear feedback on progress and study consistency, StudyFlash helps users understand how they learn and where they need to focus more effort. This shifts learning from passive reading to intentional practice.</p>
-        <p>StudyFlash is built as a productivity-oriented learning tool, combining simple design with practical features that support concentration and long-term retention. It is intended for students and self-learners who want to improve how they study, not just what they study.</p></p>
-    </section>
-
+        <p>StudyFlash is a web app built around a simple idea: most study tools focus on tracking grades, but the real challenge is learning how to study better in the first place. Instead of just organizing your notes or calculating your GPA, StudyFlash helps you actually learn.</p>
+        <p>The app is designed around techniques that work — active recall, spaced repetition, and building consistent habits. You organize what you want to learn, work through focused study sessions, and see your progress over time. The goal isn't passive rereading; it's intentional practice that sticks.</p>
+        <p>StudyFlash gives you clear feedback on where you're improving and where you need more work. It helps you spot patterns in how you study, so you can adjust and get better results. The interface is clean and distraction-free, keeping you focused on what matters: actually understanding the material.</p>
     <div id="authModal" style="display: none;">
         <div class="modalForm">
             <button onclick="closeModal()" class="close">×</button>
