Added a link to settings.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="study.html" class="links">Study</a>
             <a href="" class="links">Analytics</a>
             <a href="" class="links">Resources</a>
-            <a href="" class="links">Settings</a>
+            <a href="settings.html" class="links">Settings</a>
         </ul>
         <div class="btns">
             <h1 class="wlcm">Welcome, AndrejStanic3!</h1>
