Added sde container for documents of which user can use what go into the flashcards

--- a/study.html
+++ b/study.html
@@ -91,11 +91,27 @@
         </div>
     </div>
     
-    <div id="flashcards">
-        <div class="chatContainer">
-
+    <div id="flashcards" style="display: none;">
+        <div class="flashcardsSection">
+            <div class="sideContainer" style="display: flex; flex-direction: column;">
+                <div style="flex: 1;">
+                    <h3 style="margin: 0; margin-bottom: 20px;" id="listF">Files List</h3>
+                    <p style="color: #6b7280;">No files uploaded yet</p>
+                </div>
+                <div class="buttons2" style="margin-top: auto;">
+                    <button class="button flashcardsBtn" style="align-items: center; background-color: #4f46e5; color: white;">
+                        <img src="imgs/brain.png" height="30" width="30">Generate Flashcards
+                    </button>
+                </div>
+            </div>
+            <div class="chatContainer" style="flex: 1; margin-left: 0;">
+                <div class="chatBox">
+                    <p style="text-align: center; padding: 20px;">Select files to generate flashcards</p>
+                </div>
+            </div>
         </div>
     </div>
+
 
     <div id="quiz">
         <div class="chatContainer">
