Created quiy strucure

--- a/study.html
+++ b/study.html
@@ -116,7 +116,17 @@
 
     <div id="quiz">
         <div class="chatContainer">
-            copy of flashcards
+            <div class="sideContainer" style="display: flex; flex-direction: column;">
+                <div style="flex: 1;">
+                    <h3 style="margin: 0; margin-bottom: 20px;" id="listF">Files List</h3>
+                    <p style="color: #6b7280;">No files uploaded yet</p>
+                </div>
+                <div class="buttons2" style="margin-top: auto;">
+                    <button class="button flashcardsBtn" style="align-items: center; background-color: #4f46e5; color: white;">
+                        <img src="imgs/brain.png" height="30" width="30">Generate Quiz
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 
