--- a/study.html
+++ b/study.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title>Home</title>
+    <title>Study</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.6.0/mammoth.browser.min.js"></script>
 </head>
 <body>
     <nav>
@@ -112,8 +113,6 @@
             </div>
         </div>
     </div>
-
-
     <div id="quiz">
         <div class="chatContainer">
             <div class="sideContainer" style="display: flex; flex-direction: column;">
