--- a/dashboard.html
+++ b/dashboard.html
@@ -36,11 +36,11 @@
     <div class="stats1">
         <div class="cards">
             <h1 class="name2">Study Time</h1>
-            <label class="stat">12.5h</label>
+            <label class="stat" id="liveTimer2">12.5h</label>
         </div>
         <div class="cards">
             <h1 class="name2">Flashcards</h1>
-            <label class="stat">45</label>
+            <label class="stat" id="numOfFlashcards">45</label>
         </div>
         <div class="cards">
             <h1 class="name2">Avg score</h1>
