Moved the session timer

--- a/settings.html
+++ b/settings.html
@@ -46,7 +46,7 @@
             <div class="container3">
                 <h1 class="title2">Study time</h1>
                 <label>Time spent learning:</label>
-                <div style="position: fixed; bottom: 20px; right: 20px; background: #4f46e5; color: white; padding: 15px 20px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+                <div style="margin-top: 20px; background: #4842b4; color: white; padding: 15px 20px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
                     <p style="margin: 0; font-size: 12px; opacity: 0.9;">Session Time</p>
                     <p id="liveTimer" style="margin: 5px 0 0 0; font-size: 24px; font-weight: 600;">0h 0m 0s</p>
                 </div>
