Added logout button

--- a/settings.html
+++ b/settings.html
@@ -19,6 +19,11 @@
             <a href="study.html" class="links">Study</a>
             <a href="settings.html" id="settings" style="display: none;" class="links">Settings</a>
         </ul>
+        <div class="btns">
+            <h1 class="wlcm">Welcome, AndrejStanic3!</h1>
+            <button class="signlog">Sign up / Log in</button>
+            <button class="signlog" style="display: none;" id="logout">Log Out</button>
+        </div>
     </nav>
     <h1 class="title1">Settings</h1>
     <div class="container1">
