--- a/dashboard.html
+++ b/dashboard.html
@@ -30,8 +30,8 @@
             <h1 class="welcome-title">
                 Welcome back, <span id="userName">Student</span>! 👋
             </h1>
-            <p class="welcome-quote">
-                "Success is the sum of small efforts, repeated day in and day out."
+            <p class="welcome-quote" id="dailyQuote">
+                Loading today's quote...
             </p>
             <div style="margin-top: 20px;">
                 <span class="streak-badge">🔥 5 Day Streak</span>
@@ -43,9 +43,9 @@
             <div class="progressContainer" style="margin-top: 30px;">
                 <div class="progressHeader">
                     <span class="progressLabel">Study Time goal</span>
-                    <span class="progressValue">12.5 / 15 hours</span>
+                    <span class="progressValue" id="progressValue">0 / 0 hours</span>
                 </div>
-                <div class="progress-bar">
+                <div class="progress-bar" id="progressBar">
                     <div class="progress-fill"></div>
                 </div>
             </div>
@@ -67,9 +67,11 @@
         </div>
     </div>
 
-    <div class="two-col-wrapper">
-        <div class="container"></div>
-
+    <div class="two-col-wrapper" style="margin-top: 20px;">
+        <div class="container">
+            <h1>Flashcards created (Last 7 days)</h1>
+            <canvas id="flashcardsChart" haight="120"></canvas>
+        </div>
         <div class="container">
             <h1 style="margin-top: 0;">Quick Actions</h1>
             <div class="quick-action" data-tab="upload">
