--- a/dashboard.html
+++ b/dashboard.html
@@ -69,8 +69,8 @@
 
     <div class="two-col-wrapper" style="margin-top: 20px;">
         <div class="container">
-            <h1>Flashcards created (Last 7 days)</h1>
-            <canvas id="flashcardsChart" haight="120"></canvas>
+            <h1 style="margin-top: 0; font-size: 26px;">Flashcards created (Last 7 days)</h1>
+            <canvas id="flashcardsChart" height="260"></canvas>
         </div>
         <div class="container">
             <h1 style="margin-top: 0;">Quick Actions</h1>
@@ -90,8 +90,9 @@
     </div>
 
     
-
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="chart.js"></script>
     <script src="config.js"></script>
     <script src="init.js"></script>
     <script src="app.js"></script>
